major refactoring to support JPMS modules and work started on language spec